# lazer-mazer

./: README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: publish.yml
src/: App.css  App.tsx  audioManager.ts
src-arduino/: src-arduino.ino
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  lib.rs  main.rs
src/components/: ArduinoSettings.tsx  GameComponents.tsx  GameSettings.tsx  LaserConfigItem.tsx  LaserConfigList.tsx  LaserSlider.tsx  Navbar.tsx  SoundSettings.tsx  TabPanel.tsx
src/components/debug/: DebugControls.tsx  EventLogPanel.tsx  LaserStatusDisplay.tsx  SensorDisplay.tsx
src/context/: LaserConfigContext.tsx
src/hooks/: useDebugMonitor.ts  useGameLogic.ts
src/pages/: About.tsx  Debug.tsx  Game.tsx  Highscores.tsx  Home.tsx  Settings.tsx
src/types/: LaserConfig.ts  laserTypes.ts
src/utils/: Logger.ts  debugUtils.ts  gameUtils.ts
